--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautiful": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,15 +24,21 @@
     "url": "https://github.com/Avon113/nodeJS_blogF8/issues"
   },
   "homepage": "https://github.com/Avon113/nodeJS_blogF8#readme",
+  "lint-staged": {
+    "src/**/*.{js,scss,json}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1"
   },
   "devDependencies": {
+    "husky": "^5.1.3",
     "i": "^0.3.6",
+    "lint-staged": "^10.5.4",
     "morgan": "^1.10.0",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "sass": "^1.32.8"
   }
 }
